--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,18 +1,21 @@
 <div class="form-login">
   <mat-card>
     <mat-card-title>{{title}}</mat-card-title>
-    <mat-card-content>
-      <form action="">
+    <form  (ngSubmit)="onSubmit()" #loginForm="ngForm">
+      <mat-card-content>
         <mat-form-field class="full-width">
-          <input matInput type="text" [placeholder]="usernameText">
+          <input matInput type="text" [placeholder]="usernameText" 
+          [(ngModel)]="loginUser.username" name="username" required>
         </mat-form-field>
         <mat-form-field class="full-width">
-          <input matInput type="password" [placeholder]="passwordText">
+          <input matInput type="password" [placeholder]="passwordText" 
+          [(ngModel)]="loginUser.password" name="password" required>
         </mat-form-field>
-      </form>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary">{{loginButtonText}}</button>
-    </mat-card-actions>
+      </mat-card-content>
+      <mat-card-actions>
+        <button type="submit" mat-raised-button color="primary" 
+        [disabled]="!loginForm.form.valid">{{loginButtonText}}</button>
+      </mat-card-actions>
+    </form>
   </mat-card>
 </div>
