--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
 <h1>Dashboard</h1>
+<mat-grid-list cols='2' rowHeight='2:1'>
+    <mat-grid-tile *ngFor='let user of users'>
+        <mat-card>
+            <mat-card-title>{{user.name.first}} {{user.name.last}}</mat-card-title>
+            <mat-card-content>
+                <img [src]="user.picture.large" alt="profile-picture">
+                <p>{{user.location.street}}, {{user.location.city}}, {{user.location.state}}</p>
+            </mat-card-content>
+            <mat-card-footer></mat-card-footer>
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
