Users cards was customed

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,3 +1,10 @@
-.full-width {
-    width: 100%;
+.custom-card {
+    margin-bottom: 20px;
+}
+.custom-card-name {
+    height: 100px;
+}
+.custom-card-direction {
+    height: 50px;
+    text-overflow: ellipsis;
 }
