--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,13 +1,33 @@
-<h1>Dashboard</h1>
-<mat-grid-list cols='2' rowHeight='2:1'>
-    <mat-grid-tile *ngFor='let user of users'>
-        <mat-card>
-            <mat-card-title>{{user.name.first}} {{user.name.last}}</mat-card-title>
-            <mat-card-content>
-                <img [src]="user.picture.large" alt="profile-picture">
-                <p>{{user.location.street}}, {{user.location.city}}, {{user.location.state}}</p>
-            </mat-card-content>
-            <mat-card-footer></mat-card-footer>
-        </mat-card>
-    </mat-grid-tile>
-</mat-grid-list>
+<div class="container">
+    <h1>Dashboard</h1>
+    <div class="row" layout="row">
+        <div *ngFor="let user of users" class="col-md-4 col-sm-6 col-xs-12">
+            <mat-card class="custom-card">
+                <img mat-card-image [src]="user.picture.large" alt="profile-picture">
+                <mat-card-header>
+                    <mat-card-title class="custom-card-title">
+                        <h3>{{user.name.first}} {{user.name.last}}</h3>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <div>
+                        <p class="custom-card-direction" mat-card-subtitle>{{user.location.street}}, {{user.location.city}}, {{user.location.state}}</p>
+                    </div>
+                    <div>
+                        <mat-icon>call</mat-icon>
+                        <p>{{user.cell}}</p>
+                    </div>
+                    <div>
+                        <mat-icon>email</mat-icon>
+                        <p>{{user.email}}</p>
+                    </div>
+                    <div>
+                        <button mat-raised-button color="primary">Edit</button>
+                        <button mat-raised-button color="warn">Delete</button>
+                    </div>
+                </mat-card-content>
+                <mat-card-footer></mat-card-footer>
+            </mat-card>
+        </div>
+    </div>
+</div>
